Add Flyway migration and dependency

--- a/social-media-db/pom.xml
+++ b/social-media-db/pom.xml
@@ -68,6 +68,11 @@
             <version>${hibernate.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
 
         <!--mysql jdbc driver-->
         <dependency>
